[Meta] Remove all traces of ReactDOM

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "license": "BSD-3-Clause",
     "devDependencies": {
         "@types/react": "^18.0.18",
-        "@types/react-dom": "^18.0.6",
         "@types/react-native": "^0.69.6",
         "esbuild": "^0.15.6",
         "esbuild-plugin-alias": "^0.2.1",
@@ -30,7 +29,7 @@
         "peerDependencyRules": {
             "ignoreMissing": [
                 "react",
-                "react-dom"
+                "react-native"
             ]
         }
     }
