--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "Beef",
     "license": "BSD-3-Clause",
     "devDependencies": {
+        "@react-native-async-storage/async-storage": "^1.17.10",
         "@types/react": "^18.0.21",
         "@types/react-native": "^0.70.5",
         "esbuild": "^0.15.11",
@@ -23,7 +24,8 @@
         "zustand": "^4.1.2"
     },
     "dependencies": {
-        "spitroast": "^1.4.2"
+        "spitroast": "^1.4.2",
+        "valtio": "^1.7.4"
     },
     "pnpm": {
         "peerDependencyRules": {
