--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-native": "^0.70.5",
         "esbuild": "^0.15.11",
         "esbuild-plugin-alias": "^0.2.1",
+        "esbuild-plugin-external-global": "^1.0.1",
         "redux": "^4.2.0",
         "typescript": "^4.8.4",
         "zustand": "^4.1.2"
