--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "esbuild": "^0.15.11",
         "esbuild-plugin-alias": "^0.2.1",
         "esbuild-plugin-external-global": "^1.0.1",
+        "esbuild-plugin-replace": "^1.3.0",
         "redux": "^4.2.0",
         "typescript": "^4.8.4",
         "zustand": "^4.1.2"
