--- a/package.json
+++ b/package.json
@@ -14,16 +14,14 @@
     "author": "Beef",
     "license": "BSD-3-Clause",
     "devDependencies": {
-        "@react-native-async-storage/async-storage": "^1.17.10",
-        "@types/react": "^18.0.21",
-        "@types/react-native": "^0.70.5",
-        "esbuild": "^0.15.11",
+        "@react-native-async-storage/async-storage": "^1.17.11",
+        "@types/react": "^18.0.26",
+        "@types/react-native": "~0.68.1",
+        "esbuild": "^0.16.17",
         "esbuild-plugin-alias": "^0.2.1",
         "esbuild-plugin-external-global": "^1.0.1",
         "esbuild-plugin-replace": "^1.3.0",
-        "redux": "^4.2.0",
-        "typescript": "^4.8.4",
-        "zustand": "^4.1.2"
+        "typescript": "^4.9.4"
     },
     "dependencies": {
         "spitroast": "^1.4.2"
