--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "esbuild-plugin-alias": "^0.2.1",
         "esbuild-plugin-external-global": "^1.0.1",
         "esbuild-plugin-replace": "^1.3.0",
+        "moment": "2.22.2",
         "typescript": "^4.9.5"
     },
     "dependencies": {
