--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@swc/core": "^1.3.35",
         "@types/react": "18.0.27",
         "@types/react-native": "0.70.6",
+        "esbuild": "^0.17.10",
         "moment": "2.22.2",
         "rollup": "^3.17.1",
+        "rollup-plugin-esbuild": "^5.0.0",
         "rollup-plugin-swc3": "^0.8.0",
         "rollup-plugin-typescript-paths": "^1.4.0",
         "typescript": "^4.9.5"
