--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "license": "BSD-3-Clause",
     "devDependencies": {
         "@react-native-clipboard/clipboard": "1.10.0",
+        "@rollup/plugin-node-resolve": "^15.0.1",
+        "@rollup/plugin-replace": "^5.0.2",
+        "@swc/core": "^1.3.35",
         "@types/react": "18.0.27",
         "@types/react-native": "0.70.6",
-        "esbuild": "^0.17.5",
-        "esbuild-plugin-alias": "^0.2.1",
-        "esbuild-plugin-external-global": "^1.0.1",
-        "esbuild-plugin-replace": "^1.3.0",
+        "esbuild": "^0.17.10",
         "moment": "2.22.2",
+        "rollup": "^3.17.1",
+        "rollup-plugin-esbuild": "^5.0.0",
+        "rollup-plugin-swc3": "^0.8.0",
+        "rollup-plugin-typescript-paths": "^1.4.0",
         "typescript": "^4.9.5"
     },
     "dependencies": {
