--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@react-native-clipboard/clipboard": "1.10.0",
         "@swc/core": "^1.3.35",
         "@types/chroma-js": "^2.4.0",
+        "@types/lodash": "^4.14.191",
         "@types/react": "18.0.27",
         "@types/react-native": "0.70.6",
         "esbuild": "^0.17.11",
