--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "license": "BSD-3-Clause",
     "devDependencies": {
         "@react-native-clipboard/clipboard": "1.10.0",
-        "@swc/core": "^1.3.50",
+        "@swc/core": "1.3.50",
         "@types/chroma-js": "^2.4.0",
         "@types/lodash": "^4.14.194",
         "@types/react": "18.0.35",
@@ -26,7 +26,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@swc/helpers": "^0.5.0",
+        "@swc/helpers": "0.5.0",
         "spitroast": "^1.4.3"
     },
     "pnpm": {
